--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,4 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -34,7 +35,9 @@ body, html {
 }
 </style>
 <body>
+
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
+<!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -43,19 +46,21 @@ body, html {
   js.src = 'https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+<!-- Your customer chat code -->
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
-  theme_color="#283E4A">
+  theme_color="#72c494"
+  logged_in_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα."
+  logged_out_greeting="Πες μου ότι θέλεις με μήνυμα και θα σου απαντήσω σύντομα.">
 </div>
-<!--  ////////////////////////// messenger_platform  ////////////////////////// -->   
-
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->     
 <!-- //////////////////////////Top menu////////////////////////// -->
 <style>
 .topnav {overflow: hidden; background-color: #19273C;}
 .topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
-.topnav a:hover {background-color: #d9733b; color: black;}
-.topnav a.active {background-color: #72c494; color: white;}
+.topnav a:hover {background-color: #223A2C; color: white;}
+.topnav a.active {background-color: #72c494; color: #D4EDDE;}
 .topnav .icon {display: none;}
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
@@ -66,11 +71,11 @@ body, html {
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
 <div class="topnav" id="myTopnav">
-  <a href="https://alexandroshub.github.io" class="active"  id="home">Alexandros Hub</a>
-  <a href="https://alexandroshub.github.io/cv.html">AboutMe</a> 
-  <a href="https://alexandroshub.github.io/portfolio.html">Portfolio</a>
-  <a href="https://alexandroshub.github.io/plus.html">Plus</a> 
-  <a href="https://alexandroshub.github.io/contact.html">Contact</a>
+  <a href="https://alexandroshub.github.io" class="active"  id="home"><b>Alexandros</b>Hub</a>
+  <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
+  <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
+  <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
+  <a href="https://alexandroshub.github.io/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -79,7 +84,6 @@ body, html {
 function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
 </script>
 <!-- //////////////////////////END of Top menu////////////////////////// -->
-
 
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
@@ -214,7 +218,29 @@ Files & Publications</div>
     </p>
 		<p><span class="w3-xlarge"><i class="fa fa-file-text" style="color:red"></i> Files</span>
       <br>     
-        <span class="w3-tag w3-red w3-hide-medium">@Arduino</span>
+<style>
+.dropbtn { background-color: #000; color: white; padding: 16px; font-size: 16px; border: none;}
+.dropdown { position: relative; display: inline-block;}
+.dropdown-content { display: none; position: absolute; background-color: #b1c3de; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1;}
+.dropdown-content a {color: black; padding: 12px 16px; text-decoration: none; display: block;}
+.dropdown-content a:hover {background-color: #4B759B; color: #72c494;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: #19273C;}
+</style>
+<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+<div class="dropdown">
+  <button class="dropbtn"><b> Coding <font color="red"> <i class="fa fa-code"></i>Zone</font></b></button>
+  <div class="dropdown-content">
+<a href="https://alexandroshub.github.io/htmlcoding"> HTML5 CSS3 Javascript  <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/cpp"> C Cpp C#  <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/python"> Python  <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/arduino"> Arduino  <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/raspberrypi"> Raspberrypi <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/git"> Git <i class="fa fa-code"></i></a>  
+</div></div>    
+      
+      
+<span class="w3-tag w3-red w3-hide-medium">@Arduino</span>
 <span class="w3-tag w3-red w3-hide-medium">@Coding</span>
 <span class="w3-tag w3-red w3-hide-medium">@Projects</span>
 
