--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-<!-- SpecialPage contact  V.01.05.20
+
+<!-- SpecialPage contact  V.03.05.20
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -28,8 +29,8 @@ body, html {
 .bgimg {
     background-position: center;
     background-size: cover;
-    background-image: url("https://cdn.pixabay.com/photo/2020/03/09/18/10/aeroplane-4916661_960_720.jpg");
-    min-height: 60%;
+    background-image: url("https://66.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg");
+    min-height: 70%;
 }
 .menu {
     display: none;
@@ -92,6 +93,13 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
   <div class="w3-display-middle w3-center">
 	<span class="w3-text-white w3-hide-small" style="font-size:130px">CONTACT</span>
     <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">CONTACT</span>
+    <br>
+     <a class="w3-button w3-red" href="mailto:alexispapy@gmail.com?Subject=Web%20Email" target="_top">Sent me Email<i class="w3-margin-left fa fa-envelope"></i></a>
+  <a class="w3-button w3-blue" href="https://m.me/papaspyrou.alexandros"> Sent me Message<i class="w3-margin-left fa fa-comments-o"></i></a>
+  <a class="w3-button w3-green" href="tel:+306940548867">Call Me<i class="w3-margin-left fa fa-phone"></i></a>
+<a class="w3-button w3-blue" href="skype:live:48c538b11931770b?call">Call Me <i class="fa fa-skype"></i></a>
+   <a class="w3-button w3-black w3-opacity w3-hover-opacity-off w3-hover-black" href="https://discord.gg/WAnYJjD"> <b> Chat on  <font color="orange">Discord</font></b><i class="w3-margin-left fa fa-comments-o"></i></a>
+  
   </div>
 </header>
 
@@ -101,15 +109,11 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 <div class="w3-container w3-half"><div class="w3-center w3-padding-32">
 
 <p>
- <a class="w3-button w3-red" href="mailto:alexispapy@gmail.com?Subject=Web%20Email" target="_top">Sent me Email<i class="w3-margin-left fa fa-envelope"></i></a>
-  <a class="w3-button w3-blue" href="https://m.me/papaspyrou.alexandros"> Sent me Message<i class="w3-margin-left fa fa-comments-o"></i></a>
-  <a class="w3-button w3-green" href="tel:+306940548867">Call Me<i class="w3-margin-left fa fa-phone"></i></a>
-  
-  <a class="w3-button w3-blue" href="skype:live:48c538b11931770b?call">Call Me <i class="fa fa-skype"></i></a>
 
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform" class="w3-button w3-black">Forma</a>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform?embedded=true" width="400px" height="600px" frameborder="0" marginheight="0" marginwidth="0">Φόρτωση…</iframe><br>
+
 </p>
-<a href="https://discord.gg/WAnYJjD" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> Chat on  <font color="orange">Discord</font></b></a>
+<!--
 <h5>SOCIAL</h5><p>
 <a class="w3-button w3-light-grey" href="https://twitter.com/A_Papaspyrou"><i class="fa fa-twitter"></i></a>
 <a class="w3-button w3-light-grey" href=" https://gr.linkedin.com/in/alexandrospapaspyrou  "><i class="fa fa-linkedin"></i></a>
@@ -129,7 +133,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 <a class="w3-button w3-light-grey" href=" https://alexispapy.tumblr.com "><i class="fa fa-tumblr"></i></a>
 <a class="w3-button w3-light-grey" href="  "><i class="fa fa-asterisk  "></i></a>
 </p>
-
+-->
 </div></div>
 <div class="w3-container w3-half"><div class="w3-center w3-padding-32">
 
