--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,3 @@
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -17,25 +16,13 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-body, html {
-    height: 100%;
-    line-height: 1.8;
-}
-.w3-bar .w3-button {
-    padding: 16px;
-}
-.bgimg {
-    background-position: center;
-    background-size: cover;
-    background-image: url("https://66.media.tumblr.com/e2bab769af835a216d0ee4b49fdd161b/tumblr_ou1xb2tPKd1si59zfo4_1280.png");
-    min-height: 75%;
-}
-.menu {
-    display: none;
-}
+body, html { height: 100%; line-height: 1.8;}
+.w3-bar .w3-button {padding: 16px;}
+.bgimg {background-position: center; background-size: cover; 
+    background-image: url("https://66.media.tumblr.com/e2bab769af835a216d0ee4b49fdd161b/tumblr_ou1xb2tPKd1si59zfo4_1280.png");  min-height: 75%;}
+.menu {display: none;}
 </style>
 <body>
-
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
 <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
@@ -84,30 +71,48 @@ body, html {
 function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
 </script>
 <!-- //////////////////////////END of Top menu////////////////////////// -->
-
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-<span class="w3-tag">By: Papaspyrou Alexandros</span> 
+<span class="w3-tag">*</span> 
  </div>
+  <div class="w3-display-topright w3-text-white">
+<style>
+.dropbtn { background-color: #000; color: white; padding: 16px; font-size: 16px; border: none;}
+.dropdown { position: relative; display: inline-block;}
+.dropdown-content { display: none; position: absolute; background-color: #b1c3de; min-width: 160px; box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); z-index: 1;}
+.dropdown-content a {color: black; padding: 6px 8px; text-decoration: none; display: block;}
+.dropdown-content a:hover {background-color: #4B759B; color: #72c494;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: #19273C;}
+</style>
+<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+<div class="dropdown">
+  <button class="dropbtn"><a href="https://alexandroshub.github.io/codingzone" style="text-decoration: none"><b> Coding <font color="red"> <i class="fa fa-code"></i>Zone</font></b></a></button>
+  <div class="dropdown-content">
+<a href="https://alexandroshub.github.io/htmlcoding"> HTML5 CSS3 Javascript  <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/cpp"> C Cpp C#  <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/python"> Python  <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/arduino"> Arduino  <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/raspberrypi"> Raspberrypi <i class="fa fa-code"></i></a>
+    <a href="https://alexandroshub.github.io/git"> Git <i class="fa fa-code"></i></a>  
+</div></div> 
+  
+  
+  </div>
   <div class="w3-display-middle w3-center ">
-
-
 	<span class="w3-text-white w3-hide-small" style="font-size:130px">
     Portfolio</span>
-    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px"> <b><font color="#FF9900">/</font></b>Portfolio</span>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">Portfolio</span>
 
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-     <a href="https://alexandroshub.github.io/codingzone" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> Coding <font color="red"> <i class="fa fa-code"></i>Zone</font></b></a>
     <a href="https://alexandroshub.github.io/cono" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> try <font color="cyan"><i class="fa fa-connectdevelop fa-fw"></i> CONO</font></b></a>
-  </div>
+</div>
 </header>
-
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-large">
-
-<!-- MAIN Section //////////////////////////////////////////////////////////-->
+<!-- MAIN Section ///////////////////////////////////////////-->
 <div class="w3-center w3-padding-16 w3-black">
 	<div class="w3-row-padding">
 <!-- 1 -->    
@@ -158,9 +163,7 @@ Files & Publications</div>
     <p id="caption" class="w3-opacity w3-large"></p>
   </div>
 </div>
-
-
-<!--  **************************************************************************** ->
+<!--  ****************************************************************** ->
   <div class="w3-content" style="max-width:350px">
 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -186,9 +189,7 @@ Files & Publications</div>
          <div class="item">
         <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="New york" style="width:100%;">
       </div>
-    </div>
-  
-  
+    </div>  
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
@@ -199,7 +200,7 @@ Files & Publications</div>
     </a>
   </div>
   </div>
-<!--  **************************************************************************** -->
+<!--  **************************************************************** -->
 
 <!-- About Container -->
 <div class="w3-container"></div>
@@ -213,27 +214,7 @@ Files & Publications</div>
     <span class="w3-large w3-border-dark-grey w3-padding-16">" Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία, όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία." </span>
     </p>
 		<p><span class="w3-xlarge"><i class="fa fa-file-text" style="color:red"></i> Files</span>
-      <br>     
-<style>
-.dropbtn { background-color: #000; color: white; padding: 16px; font-size: 16px; border: none;}
-.dropdown { position: relative; display: inline-block;}
-.dropdown-content { display: none; position: absolute; background-color: #b1c3de; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1;}
-.dropdown-content a {color: black; padding: 12px 16px; text-decoration: none; display: block;}
-.dropdown-content a:hover {background-color: #4B759B; color: #72c494;}
-.dropdown:hover .dropdown-content {display: block;}
-.dropdown:hover .dropbtn {background-color: #19273C;}
-</style>
-<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
-<div class="dropdown">
-  <button class="dropbtn"><b> Coding <font color="red"> <i class="fa fa-code"></i>Zone</font></b></button>
-  <div class="dropdown-content">
-<a href="https://alexandroshub.github.io/htmlcoding"> HTML5 CSS3 Javascript  <i class="fa fa-code"></i></a>
-    <a href="https://alexandroshub.github.io/cpp"> C Cpp C#  <i class="fa fa-code"></i></a>
-    <a href="https://alexandroshub.github.io/python"> Python  <i class="fa fa-code"></i></a>
-    <a href="https://alexandroshub.github.io/arduino"> Arduino  <i class="fa fa-code"></i></a>
-    <a href="https://alexandroshub.github.io/raspberrypi"> Raspberrypi <i class="fa fa-code"></i></a>
-    <a href="https://alexandroshub.github.io/git"> Git <i class="fa fa-code"></i></a>  
-</div></div>    
+   
 <br><span class="w3-tag w3-small w3-black"><b> Αρχείο με τις εργασίες μου</b>
 <a href="https://www.dropbox.com/sh/y7j320ldle8678d/AABMt-dGKjWB1ty2JnuflvcUa?dl=0"><i class="fa fa-dropbox"></i></a>
 <a href="https://www.dropbox.com/sh/63m0fmvfn96rwd5/AAA3YfooM9GAUJk_eMntRQjga?dl=0"><i class="fa fa-dropbox"></i></a>
@@ -258,41 +239,29 @@ Files & Publications</div>
 	<span class="w3-tag w3-small w3-gray"> 
 <a id="video_two" href="https://www.youtube.com/embed/takpmt5s5Ho" target="video_feature"><b>PLC - Ταινία Μεταφοράς</b></a></span>
 <br></p></div>
-</div>
-<!--  ---------------------------------- -->
+</div><!--  ---------------------------------- -->
    </div>
   </div>
  </div> 
 </div> 
-<div class="w3-center w3-padding-32 w3-black"><span class="w3-xlarge w3-border-dark-grey w3-padding-16"><i class="fa fa-quote-left"style="font-size:12px;color:orange"></i> Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας.<i class="fa fa-quote-right"style="font-size:12px;color:orange"></i></span><br>Thomas Edison</div>
+<div class="w3-center w3-padding-32"style="background-color: #0f1724; color: #D1D3D8;"><span class="w3-xlarge w3-border-dark-grey w3-padding-16"><i class="fa fa-quote-left"style="font-size:12px;color:#72c494"></i> Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας.<i class="fa fa-quote-right"style="font-size:12px;color:#72c494"></i></span><br>Thomas Edison</div>
 
-<div class="w3-center w3-padding-64" id="publications">
-<a href="#intro" class="w3-button w3-dark-grey"><i class="fa fa-arrow-up"></i></a>
-<span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Publications</span>
-<a href="#code" class="w3-button w3-dark-grey"><i class="fa fa-arrow-down"></i></a></div>
-
+<div class="w3-center w3-padding-64" id="publications"><a href="#intro" class="w3-button w3-dark-grey"><i class="fa fa-arrow-up"></i></a><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Publications</span></div>
 <div class="w3-row">
   <div class="w3-third w3-container w3-blue w3-grayscale">
     <h5>Η εξέλιξη των Η/Υ</h5>  
-   
   </div>
   <div class="w3-third w3-container">
     <h5>Περιγραφή</h5>  <p>“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet) Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.</p> 
   </div>
-  <div class="w3-third w3-container">
-    <h5>Αρχεία</h5>  
-    <span class="w3-tag w3-small w3-red"><a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-red"><a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a></span>
-  </div>
+
+<div class="w3-third w3-container"><h5>Αρχεία</h5>  
+<span class="w3-tag w3-small w3-red"><a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-red"><a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a></span>
 </div>
-<br>
-
-
-
+</div><br>
 <!-- Promo computerevolution -><div class="w3-container w3-row w3-center w3-blue w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-red"> Publications</span><br><b>“ Η εξέλιξη των Η/Υ ”</b> (από τον άβακα στο Tablet) Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. <span class="w3-tag w3-small w3-red"><a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp"><i class="fa fa-file-text-o"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-red"><a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-slideshare"></i></a></span></div><!-- END Promo  -->
 <!-- Promo fotodiakoptis-->
-
 <!-- ////////////////////////////////////////////////////////// -->
-
 <div class="w3-row">
   <div class="w3-third w3-container w3-red w3-grayscale"><h5>Το κύκλωμα του Φωτοδιακόπτη</h5></div>
   <div class="w3-third w3-container">
@@ -304,7 +273,6 @@ Files & Publications</div>
   </div>
 </div>
 <br>
-
 <!-- ////////////////////////////////////////////////////////// -->
 <!-- Promo Michatron-->
 <div class="w3-row">
@@ -321,13 +289,11 @@ Files & Publications</div>
   </div>
 </div>
 <br>
-
 <!-- ////////////////////////////////////////////////////////// -->
 <!-- Promo MPPT-->
 <div class="w3-row">
   <div class="w3-third w3-container w3-purple w3-grayscale">
-    <h5>Τεχνικές MPPT</h5>  
-   
+    <h5>Τεχνικές MPPT</h5>   
   </div>
   <div class="w3-third w3-container">
     <h5>Περιγραφή</h5>  <p>Ανάλυση τεχνικών ανίχνευσης σημείου μέγιστης ισχύος φωτοβολταϊκού.</p> 
@@ -338,10 +304,8 @@ Files & Publications</div>
   </div>
 </div>
 <br>
-
-  <!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
+<!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
   
-
 <!--
 <div class="w3-container w3-light-grey w3-grayscale-min" style="padding:40px 16px"  id="port">
   <div class="w3-row-padding"> 
@@ -351,11 +315,7 @@ Files & Publications</div>
   
   
     <div class="w3-col m6">
-  
-
-
-
-    </div>
+	</div>
     <div class="w3-col m6">
      <!--    ================ -->
 <!--
@@ -373,10 +333,6 @@ Files & Publications</div>
     </div>
   </div>
 </div>
-
-
-
-
 <!-- may
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
