--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 
+
 <!-- SpecialPage contact  V.03.05.20
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -110,7 +111,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 
 <p>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform?embedded=true" width="400px" height="600px" frameborder="0" marginheight="0" marginwidth="0">Φόρτωση…</iframe><br>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2Ry9L_ppJeeCOBPmeUkoXG4DAb3IpjEpUYF_DmE-5h8ooiQ/viewform?embedded=true" width="100%" height="600px" frameborder="0" marginheight="0" marginwidth="0">Φόρτωση…</iframe><br>
 
 </p>
 <!--
