--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
-
-
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou and Hosted by Github 
-V.26.4.20.Fire next:'Lightsaber'
-
-CC-BY:		Alexandros Papaspyrou
-URL:		https://alexandroshub.github.io
-Contact: 	a-papaspyrou@outlook.com.gr
-Mob: 		00306940548867
-Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.alexandros@gmail.com
+V.06.05.20.Fire
 -->
 <!DOCTYPE html>
 <html>
 <title>AlexandrosHUB | Automations Programming Technology | Personal website of Papaspyrou Alexandros |</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
-<head>
+<head> 
+<!--  /////// meta information  /////// -->
 <meta charset="UTF-8">
 <meta name="author" content="Alexandros Papaspyrou">
 <meta name="description" content="Personal website of Papaspyrou Alexandros">
 <meta name="keywords" content="Automations, Programming , Technology">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- NOT READY
+<meta http-equiv="refresh" content="90">
+<base href="https://alexandroshub.github.io/" target="_blank">
+-->
+<!--  /////// end of meta & base information and start the link /////// -->  
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--  /////// end of link and start style css /////// -->
 <style>
-
 /* width */
 ::-webkit-scrollbar { width: 5px;	background-color: #000;}
 /* Track */::-webkit-scrollbar-track {	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1); 	background-color: #19273C; border-radius: 10px;}
@@ -38,7 +33,6 @@ Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.ale
 /* Handle on hover */ ::-webkit-scrollbar-thumb:hover { background: black; }
 body,h1,h2,h3,h4,h5,h6 {font-family: Arial, Helvetica,sans-serif}
 body, html { height: 100%; line-height: 1.8;}
-	
 /* Full height image header */
 .bgimg-1 {
     background-position: center; background-size: cover;
@@ -157,29 +151,17 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 	</div>
 </div>
 </center></div></div>
+
 <!-- 
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
---><!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  -->
-<style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style>
-<footer class="w3-center"><div class="w3-row"><div class="w3-container w3-half">
-<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-blue w3-padding-16">You've reached the end!</span></div>
-<a href="#home" class="w3-button w3-hover-blue"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div>
-<div class="w3-container w3-half"><div class="w3-center w3-padding-32">
-<span class="w3-large w3-bottombar w3-border-blue w3-padding-16">Thanks For Sharing!</span></div>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<div class="addthis_inline_share_toolbox"></div></div></div>
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
-  <style>div.a {font-size: 12px;}</style>
-<div class="a">
-<p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
-<i class="fa fa-creative-commons"></i>
-2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
-</p></div></footer>
-<!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  --><!-- 
+//////////// Footer 2020 ////////////////  Footer 2020 /////////////  -->
+<style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style><footer class="w3-center"><div class="w3-row"><div class="w3-container w3-half"> <div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-blue w3-padding-16">You've reached the end!</span></div> <a href="#home" class="w3-button w3-hover-blue"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div> <div class="w3-container w3-half"><div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-blue w3-padding-16">Thanks For Sharing!</span></div><!-- Go to www.addthis.com/dashboard to customize your tools --><div class="addthis_inline_share_toolbox"></div></div></div> <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom"><style>div.a {font-size: 12px;}</style><div class="a"><p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous"><i class="fa fa-creative-commons"></i>2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a></p></div></footer>
+<!-- //////////// Footer 2020 ////////////////  Footer 2020 /////////////
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
 -->
+
 <script>// Modal Image Gallery
 function onClick(element) {
   document.getElementById("img01").src = element.src;
@@ -200,16 +182,18 @@ function w3_close() { mySidebar.style.display = "none";}
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
 <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-128580719-1'); </script>
 
-</body></html>
+</body>
+</html>
 <!--  
 ╔═╗╦ ╦╔╦╗╦ ╦╦═╗╔═╗
 ╠╣ ║ ║ ║ ║ ║╠╦╝║╣ 
-╚  ╚═╝ ╩ ╚═╝╩╚═╚═╝                      
- -->
-
+╚  ╚═╝ ╩ ╚═╝╩╚═╚═╝ -->
 
 <!--
+CC-BY:		Alexandros Papaspyrou
+URL:		https://alexandroshub.github.io
+Contact: 	a-papaspyrou@outlook.com.gr | alexispapy@gmail.com | alexispapy@outlook.com | papaspyrou.alexandros@gmail.com
+Mob: 		+30 694 054 8867
 ┌─┐┬  ┌─┐─┐ ┬┌─┐┌┐┌┌┬┐┬─┐┌─┐┌─┐┬ ┬┬ ┬┌┐  ┌─┐┬┌┬┐┬ ┬┬ ┬┌┐  ┬┌─┐
 ├─┤│  ├┤ ┌┴┬┘├─┤│││ ││├┬┘│ │└─┐├─┤│ │├┴┐ │ ┬│ │ ├─┤│ │├┴┐ ││ │
 ┴ ┴┴─┘└─┘┴ └─┴ ┴┘└┘─┴┘┴└─└─┘└─┘┴ ┴└─┘└─┘o└─┘┴ ┴ ┴ ┴└─┘└─┘o┴└─┘ -->
-
