--- a/vip.html
+++ b/vip.html
@@ -1,4 +1,4 @@
-<!-- dashboard 2020   -->
+<!-- very important page 2020   -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -9,7 +9,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 -->
 <!DOCTYPE html> 
 <html>
-<title>Papaspyrou | Dashboard</title>
+<title>Papaspyrou | VIP</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
