--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -84,7 +85,7 @@ body, html { height: 100%; line-height: 1.8;}
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
 <div class="topnav" id="myTopnav">
-  <a href="https://alexandroshub.github.io" class="active"  id="home"><b>Alexandros</b>Hub</a>
+  <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://66.media.tumblr.com/7ae14e822ab38dd59a0a64153c7f966c/5c25108e88c20a16-78/s500x750/8a812b44b768f3b53a922f5f8015bf21572f1774.png" style="width:30px;"><b> Alexandros</b>Hub</a>
   <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
   <a href="https://alexandroshub.github.io/portfolio.html"><script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio</a>
   <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
@@ -188,7 +189,10 @@ function w3_close() { mySidebar.style.display = "none";}
 ╔═╗╦ ╦╔╦╗╦ ╦╦═╗╔═╗
 ╠╣ ║ ║ ║ ║ ║╠╦╝║╣ 
 ╚  ╚═╝ ╩ ╚═╝╩╚═╚═╝ -->
-
+<!-- 
+LOGO
+<div class="w3-display-topright w3-padding-large w3-xlarge w3-text-white">
+<img src= "https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" style="width:50px;" alt="Papaspyrou Alexandros"></div> -->
 <!--
 CC-BY:		Alexandros Papaspyrou
 URL:		https://alexandroshub.github.io
