--- a/plus.html
+++ b/plus.html
@@ -1,3 +1,4 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -109,6 +110,36 @@ soon</div>
 <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">Alexandroshub</span><span class="w3-tag w3-wide w3-gray">Links</span></h5>
 <div class="w3-center">
 <a href="https://alexandroshub.github.io/internetexplorer.html" class="w3-button"><i class="fa fa-external-link w3-margin-right"></i>Load Internet Explorer</a>
+
+<br>
+ 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.listbtns {
+  border-style: solid;
+  border-left-color: rgb(201, 76, 76);
+  background-color: #19273C;
+
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.7;
+  transition: 0.3s;
+}
+.listbtns:hover {opacity: 1;
+  color: #4B759B;
+  border-style: solid;
+  border-left-color: #72c494;
+}
+</style>
+<a href="https://alexandroshub.github.io/stem.html">
+<button class="listbtns">STEM</button></a>
+<br><a href="https://alexandroshub.github.io/tss.html">
+<button class="listbtns">Tech Support & Solutions </button></a>
+
 </div>
 <!-- ////////////////////////////////////////////////////////// --> 
 <!--PODCAST Section //////////////////////////////////////////// -->
