--- a/prtflio.html
+++ b/prtflio.html
@@ -1,4 +1,5 @@
 
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -311,7 +312,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
    </div>
   </div>
  </div> 
-</div> 
+ 
 <!--
 <div class="w3-center w3-padding-64" id="publications"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Publications</span></div>
 <div class="w3-row">
@@ -372,7 +373,39 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
   </div>
 </div>
 <br>
-<!-- Promo computerevolution --><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
+<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+<!-- Promo -->
+<div class="w3-container"  style="background-color: #b1c3de; padding:45px 16px"  id="port">
+  <div class="w3-row-padding"><br>
+     <center>
+    
+<!-- Arduino --><div class="w3-third">
+<a href="https://alexandroshub.github.io/python" class="w3-btn w3-button w3-hover-blue" style="font-family:Aldrich; background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px; margin: 10px 10px;"> Python  <i class="fa fa-code"></i></a></div>
+
+<!-- Arduino --><div class="w3-third">
+<a href="https://alexandroshub.github.io/cpp" class="w3-btn w3-button w3-hover-blue" style="font-family:Aldrich; background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px;  margin: 10px 10px;"> C Cpp C#  <i class="fa fa-code"></i></a></div>
+
+<!-- Arduino --><div class="w3-third">
+<a href="https://alexandroshub.github.io/htmlcoding" class="w3-btn w3-button w3-hover-blue" style="font-family:Aldrich; background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px; margin: 10px 10px;"> HTML5 CSS3 Javascript  <i class="fa fa-code"></i></a></div>
+
+<!-- ********************************* -->
+ 
+<!-- Arduino --><div class="w3-third">
+<a href="https://alexandroshub.github.io/arduino" class="w3-btn w3-button w3-hover-blue" style="font-family:Aldrich; background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px; margin: 10px 10px;"> Arduino  <i class="fa fa-code"></i></a></div>
+
+<!-- Raspberrypi --><div class="w3-third">
+<a href="https://alexandroshub.github.io/raspberrypi" class="w3-btn w3-button w3-hover-blue" style="font-family:Aldrich; background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px; margin: 10px 10px;"> Raspberrypi <i class="fa fa-code"></i></a></div>
+
+<!-- Git --><div class="w3-third">
+<a href="https://alexandroshub.github.io/git" class="w3-btn w3-button w3-hover-blue" style=" font-family:Aldrich; background-color: #4B759B; color: #72c494; border-radius: 8px; padding: 10px 20px; margin: 10px 10px;"> Git <i class="fa fa-code"></i></a>
+
+<div class="w3-row " style="padding-bottom:16px">
+
+</div>
+    </div>
+ </center>  </div></div>
+
+<!-- Promo computerevolution - -><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
   
 <!--
 <div class="w3-container w3-light-grey w3-grayscale-min" style="padding:40px 16px"  id="port">
@@ -398,9 +431,7 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 <br>}
 </div>
 <!--  ---------------------------------- -->
-    </div>
-  </div>
-</div>
+
 <!-- may
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
