--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@ V.06.05.20.Fire
 <title>AlexandrosHUB | Automations Programming Technology | Personal website of Papaspyrou Alexandros |</title>
 <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
 <head> 
+<!-- Hotjar Tracking Code for https://alexandroshub.github.io/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1806578,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 <!--  /////// meta information  /////// -->
 <meta charset="UTF-8">
 <meta name="author" content="Alexandros Papaspyrou">
