--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,9 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou | Portfolio</title>
+         <meta http-equiv="refresh" content="20">
+         <base href="https://alexandroshub.github.io/prtflio" target="_blank">
+         
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
