--- a/vip.html
+++ b/vip.html
@@ -1,3 +1,4 @@
+
 <!-- very important page 2020   -->
 
 <!--
@@ -58,14 +59,25 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 var dt = new Date();
 document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +"."+ (("0"+(dt.getMonth()+1)).slice(-2)) +"."+ (dt.getFullYear()) +" "+ (("0"+dt.getHours()).slice(-2)) +":"+ (("0"+dt.getMinutes()).slice(-2));
 </script>
-
+<iframe width="100" height="30" src="https://vclock.com/embed/#theme=0&ampm=1&showdate=1&sound=bells" frameborder="0" allowfullscreen></iframe>
 <div style="background-color: #008080; color: #7FFFD4; padding:12px 12px" id="text">
+
 <div class="w3-row-padding"><br>
 5/5/20
 pros9iki meta sto index. 
 geniko fix index. 
 update vip.
 fix plus menubar
+<br>
+20/5
+me.htl
+add ne posts @blog
+better code align
+<br>
+<b>to do </b>
+Portfolio Page
+me page
+start "the tech show"  pod/vid/blg
 </div></div>        
         
 </body>
