--- a/prtflio.html
+++ b/prtflio.html
@@ -1,5 +1,3 @@
-
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -404,6 +402,19 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 </div>
     </div>
  </center>  </div></div>
+ 
+<div class="w3-container"  style="background-color: #3A3A3A; padding:45px 16px"  id="port"> 
+ 
+<center><span class="w3-opacity w3-large w3-border-dark-grey w3-padding-16" style="text-shadow:1px 1px 0 #444"><i class="fa fa-quote-left"style="font-size:12px;color:#72c494"></i><b> Η εξέλιξη των Η/Υ</b> Από τον άβακα στο Tablet <i class="fa fa-quote-right"style="font-size:12px;color:#72c494"></i></span></center>
+<br>  
+
+<div class="w3-container w3-half">
+<iframe style='width:100%;height:350px' src='https://online.pubhtml5.com/gegj/kmyo/'  seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true' ></iframe>
+</div>
+<div class="w3-container w3-half">
+ <iframe src="//www.slideshare.net/slideshow/embed_code/key/dqrMfCNJjDgoaY" width="100%" height="350" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+</div>
+</div>
 
 <!-- Promo computerevolution - -><div class="w3-container w3-row w3-center w3-green w3-padding-32 w3-grayscale"><span class="w3-tag w3-small w3-pink"> GAME</span><br><b>“kremaλa”</b> Παιχνίδι σε VisualBasic για PC <span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/o2lbp2oxh7it4cz/Kremala.BETA.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/rnfdz5moi5n1mx8/_kremaλa_%20.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/s/j5lomf3k4fssn0c/_kremalaki2_.rar?dl=0"><i class="fa fa-dropbox"></i></a></span>&nbsp;<span class="w3-tag w3-small w3-pink"><a href="https://www.dropbox.com/sh/uv2qaxzz310wmmf/AACtuaf3OciKJpqucZzBbcc1a?dl=0"><i class="fa fa-code"></i></a></span></div><!-- END Promo  -->
   
