--- a/cv.html
+++ b/cv.html
@@ -98,7 +98,7 @@
                         <img class="w3-round" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="height:166px;width:166px" alt="imgPapaspyrou">   
                      </p>
                      <div class="w3-row">
-                        <div class="w3-half"><a class="w3-button w3-block w3-theme-d5 w3-section" title="Download" href="http://goo.gl/FxkYxg"><i class="fa fa-cloud-download w3-margin-right w3-large"></i></a></div>
+                        <div class="w3-half"><a class="w3-button w3-block w3-theme-d5 w3-section" title="Download" href="https://drive.google.com/file/d/1l0eZ0ZTeY3NTI-zRx8iVR_hdiBmMuI6J/view?usp=sharing"><i class="fa fa-cloud-download w3-margin-right w3-large"></i></a></div>
                         <div class="w3-half"><a class="w3-button w3-block w3-theme w3-section" title="Linkedin" href="https://www.linkedin.com/in/alexandrospapaspyrou"><i class="fa fa-linkedin fa-fw w3-margin-right w3-large"></i></a></div>
                      </div>
                      <div class="w3-row w3-opacity">
