--- a/stay.html
+++ b/stay.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
    <title>AlexandrosHUB | Automations IoT Programming Technology | Personal website of Papaspyrou Alexandros |</title>
@@ -28,8 +29,32 @@
 </style>
 <body>
  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-center">stay connected</h1>
+    <h1 class="w3-jumbo w3-animate-top w3-center">stayConnected</h1>
     <p class="w3-large w3-center">@alexandroshub <br>
+    
+    <style>
+.button {
+  background-color: #144; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: #1C00ff00; 
+  color: #fff; 
+  border: 4px solid #fff;
+}
+</style>
+<a href="https://sites.google.com/view/papaspyrou"><button class="button button1">SITE</button></a>
+
+   <br>
     
     <i class="fa fa-instagram" style="font-size:48px;color:#19273c"></i>
     <i class="fa fa-facebook-f" style="font-size:45px;color:#19273c"></i>
