--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
    ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
    ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
    ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
-   Welcome in my personal website 100% Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou and Hosted by Github 
-   V.14.07.20.ALIEN
-   -->
+   Welcome in my personal website 100% Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou and Hosted by Github | V.Aug.20.ALIEN
+-->
 <!DOCTYPE html>
 <html>
    <title>AlexandrosHUB | Automations IoT Programming Technology | Personal website of Papaspyrou Alexandros |</title>
@@ -56,7 +55,7 @@
    <body>
       <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
       <!-- Load Facebook SDK for JavaScript -->
-      <div id="fb-root"></div>
+   <!--      <div id="fb-root"></div>
       <script>(function(d, s, id) {
          var js, fjs = d.getElementsByTagName(s)[0];
          if (d.getElementById(id)) return;
@@ -66,7 +65,7 @@
          }(document, 'script', 'facebook-jssdk'));
       </script>
       <!-- Your customer chat code -->
-      <div class="fb-customerchat"
+   <!--      <div class="fb-customerchat"
          attribution=setup_tool
          page_id="1610585155641169"
          theme_color="#72c494"
@@ -251,14 +250,6 @@
    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-128580719-1'); </script>
    </body>
 </html>
-<!--  
-   ╔═╗╦ ╦╔╦╗╦ ╦╦═╗╔═╗
-   ╠╣ ║ ║ ║ ║ ║╠╦╝║╣ 
-   ╚  ╚═╝ ╩ ╚═╝╩╚═╚═╝ -->
-<!-- 
-   LOGO
-   <div class="w3-display-topright w3-padding-large w3-xlarge w3-text-white">
-   <img src= "https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" style="width:50px;" alt="Papaspyrou Alexandros"></div> -->
 <!--
    CC-BY:		Alexandros Papaspyrou
    URL:		https://alexandroshub.github.io
