--- a/i.html
+++ b/i.html
@@ -3,7 +3,7 @@
    <title>AlexandrosHUB | Automations IoT Programming Technology | Personal website of Papaspyrou Alexandros |</title>
    <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
    <head>
-   	  <meta http-equiv="Refresh" content="5;url=https://alexandroshub.github.io/menu.html">
+   	  <meta http-equiv="Refresh" content="5;url=https://alexandroshub.github.io/menu">
       <!--  /////// meta information  /////// -->
       <meta charset="UTF-8">
       <meta name="author" content="Alexandros Papaspyrou">
