--- a/iot.html
+++ b/iot.html
@@ -18,7 +18,8 @@
       <style>
  body,h1,h2,h3,h4,h5,h6 {font-family: Arial, Helvetica,sans-serif}
          body, html { height: 100%; line-height: 1.8;
-          background: linear-gradient(to top right, #72c494 0%, #19273c 100%)}  
+         background-color: #72c494; /* For browsers that do not support gradients */
+         background: linear-gradient(to top right, #19273c 0%,  #72c494 50%,  #19273c 100%)}  
       </style>
    </head>
 <body>
